# letscode

./: .gitignore  AGENTS.md  README.md  config.example.json  intro.md  pyproject.toml
docs/: acp-design.md  cache-multiturn-probe-2026-07-06.md  cache-open-source-survey.md  cache-probe-2026-07-05.md  cc-import-analysis.md  event-alignment.md
letscode/: __init__.py  __main__.py  agent.py  agent_card.py  cache_markers.py  cli.py  config.py  events.py  feed.py  feed_util.py  image_store.py  llm.py  prompt.py  prompt_blocks.py  prompt_renderer.py  rules.py  sandbox.py  stream.py  subscribers.py  vision_proxy.py
letscode/acp/: __init__.py  cli.py  commands.py  server.py  session.py  summaries.py  titles.py
letscode/builtin_agents/: Explore.md  Plan.md  Review.md  SetupZed.md
letscode/importers/: __init__.py  cc.py  report.py
letscode/mcp/: __init__.py  client.py
letscode/tools/: __init__.py  _display.py  _types.py  agent.py  bash.py  edit.py  glob.py  grep.py  read.py  runner.py  (+2 more)
scratch/: progress_demo.py  progress_demo.sh
scripts/: probe_cache.py  probe_ds_kv_cache.py  probe_glm_cache.py  probe_multiturn_cache.py  probe_multiturn_cache2.py  verify_e2e_cache.py
tests/: test_acp_translate.py  test_agent_card.py  test_cache_markers.py  test_compact.py  test_config.py  test_display.py  test_events.py  test_import_cc.py  test_llm.py  test_prompt.py  test_prompt_message.py  test_prompt_renderer.py  test_rules.py  test_runner.py  test_skill.py  test_stream.py  test_streambuffer.py  test_summaries.py  test_thought_replay.py  test_titles.py  test_vision_proxy.py
(+1 files in other folders)
