[project]
name = "letscode"
version = "0.3.0"
description = "Lightweight Python AI agent harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.10.0",
    "mcp>=1.27.0",
    "openai>=1.0",
]

[project.scripts]
letscode = "letscode.cli:main"
letscode-acp = "letscode.acp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
